--- a/bse-corporate-announcement-backend/src/main/resources/application.properties
+++ b/bse-corporate-announcement-backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=bse-corporate-announcement-backend
+
+# MySQL Connection Details
+spring.datasource.url=jdbc:mysql://localhost:3306/bseca_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# JPA & Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Optional: Use UTC Timezone
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+logging.level.root=ERROR
