--- a/bse-corporate-announcement-backend/src/main/resources/application.properties
+++ b/bse-corporate-announcement-backend/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Optional: Use UTC Timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-logging.level.root=ERROR
+# logging.level.root=ERROR
