--- a/stock-screener-frontend/package.json
+++ b/stock-screener-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bse-corporate-announcement-frontend",
+  "name": "stock-screener-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
