--- a/stock-screener-backend/src/main/resources/application.properties
+++ b/stock-screener-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=stock-screener-backend
 
 # MySQL Connection Details
-spring.datasource.url=jdbc:mysql://localhost:3306/stockscreenerdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/stockscreenerdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Optional: Use UTC Timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-# logging.level.root=ERROR
+logging.level.root=ERROR
