--- a/stock-screener-backend/src/main/resources/application.properties
+++ b/stock-screener-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=stock-screener-backend
 # MySQL Connection Details
 spring.datasource.url=jdbc:mysql://localhost:3306/stockscreenerdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=abhaymac
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
