--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,78 @@
+# IDE and Editor files
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Log files
+*.log
+logs/
+log/
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Angular build artifacts
+dist/
+build/
+.angular/
+
+# Java build artifacts
+target/
+*.class
+*.jar
+*.war
+*.ear
+
+# Maven
+.mvn/
+mvnw
+mvnw.cmd
+
+# Spring Boot
+application-*.properties
+application-*.yml
+application-*.yaml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Test reports
+test-results/
+junit.xml
+
+# Package files
+*.tgz
+*.tar.gz
+*.zip
+
+# IDE specific
+*.sublime-project
+*.sublime-workspace
