Searching api logic added to add stock

--- a/stock-screener-backend/src/main/resources/application.properties
+++ b/stock-screener-backend/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Optional: Use UTC Timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Logging configuration - set to ERROR level for entire project
+logging.level.root=ERROR
+logging.level.com.aps=ERROR
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
+
+# Logging Configuration
+logging.pattern.console= ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
