Add data api implemented

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,15 @@ junit.xml
 # IDE specific
 *.sublime-project
 *.sublime-workspace
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
