--- a/stock-screener-backend/src/main/resources/application.properties
+++ b/stock-screener-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=root
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Optional: Use UTC Timezone
