--- a/stock-screener-analytics/requirements.txt
+++ b/stock-screener-analytics/requirements.txt
@@ -2,3 +2,10 @@ flask==2.3.3
 openai==1.50.0
 httpx==0.24.1
 python-dotenv==1.0.0
+requests
+pandas
+numpy
+sqlalchemy
+pymysql
+beautifulsoup4
+matplotlib
